bug fix for mixed non entry in callback module